--- a/roles/docker-prometheus-grafana/tasks/main.yml
+++ b/roles/docker-prometheus-grafana/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: Mount EFS to server
   mount:
     path: /data
-    src: "{{ efs_dns_name }}"
-    opts: nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport
+    src: "{{ efs_dns_name }}:/"
+    opts: "nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport"
     fstype: nfs4
     state: mounted
