--- a/roles/docker-prometheus-grafana/tasks/main.yml
+++ b/roles/docker-prometheus-grafana/tasks/main.yml
@@ -9,3 +9,19 @@
     opts: "nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport"
     fstype: nfs4
     state: mounted
+
+# Install docker
+- name: install the docker for CentOS
+  yum:
+    name: https://download.docker.com/linux/centos/7/x86_64/stable/Packages/docker-ce-18.09.6-3.el7.x86_64.rpm
+    state: present
+  when: ansible_distribution == "CentOS"
+
+- name: install the docker for Ubuntu
+  apt:
+    deb: https://download.docker.com/linux/ubuntu/dists/bionic/pool/stable/amd64/docker-ce_18.09.6~3-0~ubuntu-bionic_amd64.deb
+    state: present
+  when: ansible_distribution == "Ubuntu"
+
+- name: Start docker
+  service: name=docker state=started enabled=yes
