--- a/roles/docker-prometheus-grafana/tasks/main.yml
+++ b/roles/docker-prometheus-grafana/tasks/main.yml
@@ -13,8 +13,11 @@
 # Install docker
 - name: install the docker for CentOS
   yum:
-    name: https://download.docker.com/linux/centos/7/x86_64/stable/Packages/docker-ce-18.09.6-3.el7.x86_64.rpm
-    state: present
+    name: "{{ packages }}"
+  vars:
+    packages:
+    - https://download.docker.com/linux/centos/7/x86_64/stable/Packages/docker-ce-18.09.6-3.el7.x86_64.rpm
+    - https://download.docker.com/linux/centos/7/x86_64/stable/Packages/docker-ce-cli-18.09.6-3.el7.x86_64.rpm
   when: ansible_distribution == "CentOS"
 
 - name: install the docker for Ubuntu
