--- a/roles/docker-prometheus-grafana/tasks/main.yml
+++ b/roles/docker-prometheus-grafana/tasks/main.yml
@@ -10,21 +10,12 @@
     fstype: nfs4
     state: mounted
 
-# Install docker
-- name: install the docker for CentOS
-  yum:
-    name: "{{ packages }}"
-  vars:
-    packages:
-    - https://download.docker.com/linux/centos/7/x86_64/stable/Packages/docker-ce-18.09.6-3.el7.x86_64.rpm
-    - https://download.docker.com/linux/centos/7/x86_64/stable/Packages/docker-ce-cli-18.09.6-3.el7.x86_64.rpm
-  when: ansible_distribution == "CentOS"
+# Install docker on CentOS
+- name: Installing Docker repo
+  get_url: url=https://download.docker.com/linux/centos/docker-ce.repo dest=/etc/yum.repos.d/docker-ce.repo
 
-- name: install the docker for Ubuntu
-  apt:
-    deb: https://download.docker.com/linux/ubuntu/dists/bionic/pool/stable/amd64/docker-ce_18.09.6~3-0~ubuntu-bionic_amd64.deb
-    state: present
-  when: ansible_distribution == "Ubuntu"
+- name: "Installing docker-ce package"
+  yum: pkg=docker-ce state=present
 
 - name: Start docker
   service: name=docker state=started enabled=yes
