--- a/roles/docker-prometheus-grafana/tasks/main.yml
+++ b/roles/docker-prometheus-grafana/tasks/main.yml
@@ -2,6 +2,9 @@
 - name: create data directory
   file: path=/data state=directory
 
+- name: Sleep before mount EFS
+  command: "sleep 30"
+  
 - name: Mount EFS to server
   mount:
     path: /data
